--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "flowbite-react": "^0.8.0",
+    "framer-motion": "^11.0.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
