--- a/package.json
+++ b/package.json
@@ -1,7 +1,33 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "flowbite-react": "^0.8.0",
-    "react-redux": "^9.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
+    "react-redux": "^9.1.0",
+    "validator": "^13.11.0"
+  },
+  "name": "event-planner-project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon backend/index.js",
+    "start": "node backend/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
