--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.28",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.1",
