--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.11.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.28",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
