--- a/Client/package.json
+++ b/Client/package.json
@@ -19,9 +19,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
