--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express-validator": "^7.0.1",
     "flowbite-react": "^0.8.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "react-redux": "^9.1.0",
