--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.28",
     "jwt-decode": "^4.0.0",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
