--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "react-redux": "^9.1.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "name": "event-planner-project",
