--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
+    "nodemailer": "^6.9.13",
     "react-redux": "^9.1.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
